# zdppy_log

./: .gitignore  README.md  build.bat  build.sh  main.py  pyproject.toml  setup.py
examples/: 01基本使用.py  02捕获方法错误.py  03只往控制台输出.py  06直接使用logger.py  07add函数.py  08创建日志文件.py  09不输出到控制台.py  10日志的配置.py  11异常捕获.py  12exception方法异常捕获.py  13多模块使用.py  14多线程使用.py
examples/c01_basic/: 01 基本用法.py  02 捕获方法错误.py  03 日志序列化.py  c03_log_catch.py  c03_log_catch2.py  c03_log_catch3.py
examples/c02_teach_20240214/: 02 捕获方法错误.py  03 捕获类实例方法错误.py  05 捕获类方法错误.py  06 日志文件.py  07 多日志文件.py  08 自动生成日志目录.py  09 根据服务启动时间自动生成日志文件名.py  10 JSON日志.py
examples/c03_teach_20240218/: 01 基本用法.py  04 捕获静态方法错误.py  08 自动生成日志目录.py  11 设置日志级别.py  12 按照日志级别记录到不同文件.py  13 日志切割.py  14 日志压缩.py  15 日志清理.py
examples/c04_teach_gaoxiang_20240221/: 01 基本用法.py  02 捕获方法错误.py  04 捕获静态方法错误.py  06 日志文件.py  07 多日志文件.py  10 JSON日志.py  11 log_level.py  11 log_level2.py  12 log_level_file.py  12 log_level_file2.py  13 log_rotation.py  14 log_retention.py
examples/c04_teach_gaoxiang_20240221/c16_log_global/: g.py  main.py
examples/tmodule/: __init__.py  catch.py
examples/zdppy_log/: z01_基本使用.py  z04_同时输出到控制台和日志文件.py  z05_日志序列化为json.py
log/: _colorama.py  _logger.py  level.py  logger.py
log/colorama/: initialise.py
zdppy_log/: __init__.py  _colorama.py  _ctime_functions.py  _logger.py  logger.py  zdppy_log.py
zdppy_log/colorama/: __init__.py  ansi.py  win32.py  winterm.py
zdppy_log/libs/: __init__.py
zdppy_log/libs/loguru/: _colorama.py  _ctime_functions.py  _handler.py  (+1 more)
zdppy_log/loguru/: _logger.py
