[tool.poetry]
name = "zdppy_log"
version = "0.1.0"
description = "python日志工具"
authors = ["zhangdapeng <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
